styles/style.css
:root {
    --color-primary: #222831;
    --color-secondary: #31363F;
    --teal: #76ABAE;
    --translucent-teal: #76abaed9;
    --dark-teal: #007F73;
    --translucent-dark-teal: #007f728c;
    --off-white: #EEEEEE;
    --gold: #FFC700;
    --cell-size: 8vmin;
}

html,
body {
    padding: 0;
    margin: 0;
    font-family: sans-serif;
    background-color: var(--off-white);
}

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
}

main {
    height: 100%;
}

h1,
h2,
h3 {
    text-align: center;
}

h3 {
    font-style: italic;
}

header, 
footer {
    padding: 1rem 2rem;
}

header {
    font-weight: bold;
    background-color: var(--color-primary);
    box-shadow: 5px 0 10px var(--color-secondary);
}

header a {
    color: var(--off-white);
}

footer {
    text-align: center;
}

footer a {
    display: flex;
    align-items: center;
    justify-content: center;
}

a img {
    width: 24px;
    margin: 0 5px;
}

footer a,
.game-description p,
.big-heading {
    color: var(--color-primary);
}

header a,
footer a {
    text-decoration: none;
}

table {
    border-collapse: collapse;
    background-color: var(--teal);
}

table,
tr,
td {
    border: 1px solid var(--dark-teal);
}

tr,
td {
    padding: 0;
    margin: 0;
}

td {
    box-sizing: border-box;
    height: var(--cell-size);
    width: var(--cell-size);
}

/* Created checked board pattern */
tr:nth-child(even) td:nth-child(odd), 
tr:nth-child(odd) td:nth-child(even) {
    background-color: var(--off-white);
}

.big-heading {
    font-size: 4rem;
    font-family: "Holtwood One SC";
    text-align: center;
}

.title-image {
    width: 25vw;
}

.hidden {
    display: none;
}

.game-description {
    padding: 5vh 15vw;
}

.game-description p {
    text-align: right;
    margin-left: 10vw;
    font-size: 1.25rem;
}

.state-game-button {
    background-color: var(--color-primary);
    color: white;
    text-transform: uppercase;
    font-size: 1.25rem;
    padding: .5rem 1rem;
    border: none;
    font-weight: bold;
    border-radius: 50px;
    transition: background-color 5ms linear;
    cursor: pointer;
}

.state-game-button:hover {
    background: var(--color-secondary);
    color: var(--teal);
}

.state-game-button:active {
    background:  var(--teal);
    color: white;
}

.game-area,
#start-scene div {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.game-area,
#start-scene > div {
    flex-direction: column;
}

.game-area p {
    margin: 0;
}

.game-area {
    margin: 0 10vw;
}

.game-area,
.game-board-container {
    position: relative;
}

.game-area button {
    margin-top: 8px;
}

.game-piece {
    width: var(--cell-size);
}

.game-cell {
    cursor: pointer;
    width: 100%;
    height: 100%;
}


.highlighted-cell {
    background-color: var(--gold);
}

#correct-answer,
#incorrect-answer {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: var(--translucent-dark-teal);
    color: var(--off-white);
} 

#correct-answer > div,
#incorrect-answer > div {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#correct-answer h2,
#incorrect-answer h2 {
    font-family: "Holtwood One SC";
    text-shadow: 2px 2px var(--color-primary);
    font-size: 1.5rem;
}

#blunder-explanation {
    padding: 5% 10%;
    background-color: var(--translucent-teal);
    color: var(--color-primary);
    text-align: justify;
}

